# safe_face_regconition_system

./: .gitignore  README.md  pyproject.toml  regco_demo.py  regconition.py  subcrise.py
anti_spoofing/: anti_fake.py
anti_spoofing/src/: anti_spoof_predict.py
anti_spoofing/src/model_lib/: MiniFASNet.py
edgeface/face_alignment/mtcnn_pytorch/: extract_weights_from_caffe_models.py
edgeface/face_alignment/mtcnn_pytorch/src/: first_stage.py  get_nets.py  matlab_cp2tform.py
face_database/0002/: embedding.npy
feature_extracted/: vertify.npy
